--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
     <h1>ASSIGNATURES de 1er de DAM</h1>
     <ul>
-        <li>Entorns de Desenvolupament</li>
-        <li>Sistemes Informàtics</li>
-        <li>Programació</li>
-        <li>Llenguatges de Marques</li>
-        <li>Base de Dades</li>
-        <li>FOL</li>
+        <li><a href=EdD.html>Entorns de Desenvolupament</a></li>
+        <li><a href=SI.html>Sistemes Informàtics</a></li>
+        <li><a href=Programació.html>Programació</a></li>
+        <li><a href=LLMM.html>Llenguatges de Marques</a></li>
+        <li><a href=BBDD.html>Bases de Dades</a></li>
+        <li><a href=FOL.html>FOL</a></li>
     </ul>
 </body>
 </html>
